--- a/index.html
+++ b/index.html
@@ -116,18 +116,139 @@
             <img src="https://via.placeholder.com/300" alt="Image 2">
             <h2>Service 2</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<!DOCTYPE html>
+<html lang="ps">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>زما په اړه</title>
+    <style>
+        /* Page style */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+            direction: rtl;
+        }
+
+        /* Header Style */
+        header {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 30px 0;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 36px;
+        }
+
+        /* Navigation Menu Style */
+        nav {
+            background-color: #333;
+            text-align: center;
+        }
+
+        nav a {
+            color: white;
+            padding: 15px 25px;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 18px;
+        }
+
+        nav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        /* Main Content Style */
+        .main-content {
+            padding: 20px;
+        }
+
+        .about-section {
+            background-color: white;
+            padding: 30px;
+            margin: 20px 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .about-section h2 {
+            color: #4CAF50;
+            text-align: center;
+        }
+
+        .about-section p {
+            font-size: 18px;
+            line-height: 1.6;
+            color: #555;
+        }
+
+        .footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Header -->
+    <header>
+        <h1>زما ویب پاڼه</h1>
+        <p>د شمس الله په اړه معلومات</p>
+    </header>
+
+    <!-- Navigation Menu -->
+    <nav>
+        <a href="#about">زما په اړه</a>
+        <a href="#services">خدمات</a>
+        <a href="#contact">تماس</a>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="main-content">
+
+        <!-- About Section -->
+        <div class="about-section" id="about">
+            <h2>زما په اړه</h2>
+            <p>
+                سلام! زه شمس الله یم. زه یو ځوان او پرمخ تلونکی شخصیت یم چې د خپل هیواد او خلکو د پرمختګ لپاره هڅې کوم.
+                زه د ټیکنالوژۍ، موبایل ایپلیکیشن جوړونې، او اقتصاد په برخو کې ځانګړی علاقه لرم. 
+                زه هڅه کوم چې د خپلو مهارتونو له لارې خلکو ته د ژوند په مختلفو برخو کې مرسته وکړم.
+            </p>
+            <p>
+                زما اراده دا ده چې خپل پوهه او مهارتونه د خلکو په خدمت کې واچوم. زه غواړم چې د ټیکنالوژۍ له لارې
+                نوي فرصتونه رامنځته کړم او د خلکو ژوند ښه کړم. ددې لپاره، زه په مختلفو پروژو کار کوم او غواړي چې 
+                خپلې تجربې له نورو سره شریکې کړم.
+            </p>
         </div>
 
-        <div class="card">
-            <img src="https://via.placeholder.com/300" alt="Image 3">
-            <h2>Service 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <!-- Services Section (Optional) -->
+        <div class="about-section" id="services">
+            <h2>زما خدمات</h2>
+            <p>زه د ویب ډیزاین، ایپلیکیشن پراختیا، او مشورتي خدماتو په برخه کې تجربه لرم. که تاسو ته د دې خدماتو اړتیا وي، کولی شئ زما سره اړیکه ونیسئ.</p>
+        </div>
+
+        <!-- Contact Section (Optional) -->
+        <div class="about-section" id="contact">
+            <h2>تماس</h2>
+            <p>تاسو کولی شئ زما سره په لاندې ایمیل یا د اړیکې ب formه له لارې اړیکه ونیسئ:</p>
+            <p>Email: example@example.com</p>
         </div>
     </div>
 
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2024 My Beautiful Website | All rights reserved</p>
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2024 شمس الله | ټول حقونه خوندي دي</p>
     </footer>
 
 </body>
