--- a/index.html
+++ b/index.html
@@ -237,19 +237,149 @@
             <h2>زما خدمات</h2>
             <p>زه د ویب ډیزاین، ایپلیکیشن پراختیا، او مشورتي خدماتو په برخه کې تجربه لرم. که تاسو ته د دې خدماتو اړتیا وي، کولی شئ زما سره اړیکه ونیسئ.</p>
         </div>
+<!DOCTYPE html>
+<html lang="ps">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>زما ویب پاڼه</title>
+    <style>
+        /* عام ډیزاین */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            direction: rtl;
+            text-align: right;
+        }
 
-        <!-- Contact Section (Optional) -->
-        <div class="about-section" id="contact">
-            <h2>تماس</h2>
-            <p>تاسو کولی شئ زما سره په لاندې ایمیل یا د اړیکې ب formه له لارې اړیکه ونیسئ:</p>
-            <p>Email: example@example.com</p>
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        nav a {
+            float: right;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+        }
+
+        nav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        section {
+            padding: 20px;
+            margin: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        .service {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+        }
+
+        .service div {
+            width: 45%;
+            padding: 10px;
+            background-color: #f1f1f1;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .contact-form input, .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+
+        .contact-form button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .contact-form button:hover {
+            background-color: #45a049;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>زما ویب پاڼه</h1>
+        <p>د شمس الله په اړه معلومات</p>
+    </header>
+
+    <!-- منو -->
+    <nav>
+        <a href="#">کور</a>
+        <a href="#">زما په اړه</a>
+        <a href="#">خدمات</a>
+        <a href="#">تماس</a>
+    </nav>
+
+    <!-- اصلي منځپانګه -->
+    <section>
+        <h2>زما په اړه</h2>
+        <p>سلام! زه شمس الله یم. زه یو ځوان او پرمخ تلونکی شخصیت یم چې د خپل هیواد او خلکو د پرمختګ لپاره هڅې کوم. زه د ټیکنالوژۍ، موبایل ایپلیکیشن جوړونې، او اقتصاد په برخو کې ځانګړی علاقه لرم. زه هڅه کوم چې د خپلو مهارتونو له لارې خلکو ته د ژوند په مختلفو برخو کې مرسته وکړم.</p>
+
+        <h2>زما خدمات</h2>
+        <div class="service">
+            <div>
+                <h3>ویب ډیزاین</h3>
+                <p>زه د ویب ډیزاین خدمات وړاندې کوم، ترڅو ستاسو ویب پاڼه ښکلي او کاروونکو ته اسانه شي.</p>
+            </div>
+            <div>
+                <h3>ایپلیکیشن پراختیا</h3>
+                <p>زه د موبایل ایپلیکیشن جوړونې په برخه کې هم تجربه لرم او کولی شم ستاسو ایپلیکیشن لپاره حلونه وړاندې کړم.</p>
+            </div>
         </div>
-    </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <p>&copy; 2024 شمس الله | ټول حقونه خوندي دي</p>
+        <h2>تماس</h2>
+        <div class="contact-form">
+            <form>
+                <input type="text" name="name" placeholder="ستاسو نوم">
+                <input type="email" name="email" placeholder="برېښنالیک">
+                <textarea name="message" placeholder="پیغام ولیکئ" rows="5"></textarea>
+                <button type="submit">ارسال</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- فوټر -->
+    <footer>
+        <p>© 2024 شمس الله | ټول حقونه خوندي دي</p>
     </footer>
-
 </body>
 </html>
