--- a/index.html
+++ b/index.html
@@ -1,254 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Beautiful Website</title>
-    <style>
-        /* Overall page style */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-        }
-
-        /* Header style */
-        header {
-            background-color: #4CAF50;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        header h1 {
-            margin: 0;
-        }
-
-        /* Navigation menu style */
-        nav {
-            text-align: center;
-            background-color: #333;
-        }
-
-        nav a {
-            color: white;
-            padding: 14px 20px;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        /* Main content style */
-        .main-content {
-            display: flex;
-            justify-content: space-around;
-            padding: 20px;
-            flex-wrap: wrap;
-        }
-
-        .card {
-            background-color: white;
-            width: 30%;
-            padding: 20px;
-            margin: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-
-        .card img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-
-        .card h2 {
-            margin-top: 10px;
-            color: #333;
-        }
-
-        .card p {
-            color: #555;
-        }
-
-        /* Footer style */
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
-
-    <!-- Header Section -->
-    <header>
-        <h1>Welcome to My Beautiful Website</h1>
-        <p>Your journey to amazing content starts here!</p>
-    </header>
-
-    <!-- Navigation Menu -->
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#contact">Contact</a>
-    </nav>
-
-    <!-- Main Content -->
-    <div class="main-content">
-        <div class="card">
-            <img src="https://via.placeholder.com/300" alt="Image 1">
-            <h2>Service 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-
-        <div class="card">
-            <img src="https://via.placeholder.com/300" alt="Image 2">
-            <h2>Service 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-<!DOCTYPE html>
-<html lang="ps">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>زما په اړه</title>
-    <style>
-        /* Page style */
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 0;
-            direction: rtl;
-        }
-
-        /* Header Style */
-        header {
-            background-color: #4CAF50;
-            color: white;
-            text-align: center;
-            padding: 30px 0;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 36px;
-        }
-
-        /* Navigation Menu Style */
-        nav {
-            background-color: #333;
-            text-align: center;
-        }
-
-        nav a {
-            color: white;
-            padding: 15px 25px;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 18px;
-        }
-
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        /* Main Content Style */
-        .main-content {
-            padding: 20px;
-        }
-
-        .about-section {
-            background-color: white;
-            padding: 30px;
-            margin: 20px 0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .about-section h2 {
-            color: #4CAF50;
-            text-align: center;
-        }
-
-        .about-section p {
-            font-size: 18px;
-            line-height: 1.6;
-            color: #555;
-        }
-
-        .footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
-</head>
-<body>
-
-    <!-- Header -->
-    <header>
-        <h1>زما ویب پاڼه</h1>
-        <p>د شمس الله په اړه معلومات</p>
-    </header>
-
-    <!-- Navigation Menu -->
-    <nav>
-        <a href="#about">زما په اړه</a>
-        <a href="#services">خدمات</a>
-        <a href="#contact">تماس</a>
-    </nav>
-
-    <!-- Main Content -->
-    <div class="main-content">
-
-        <!-- About Section -->
-        <div class="about-section" id="about">
-            <h2>زما په اړه</h2>
-            <p>
-                سلام! زه شمس الله یم. زه یو ځوان او پرمخ تلونکی شخصیت یم چې د خپل هیواد او خلکو د پرمختګ لپاره هڅې کوم.
-                زه د ټیکنالوژۍ، موبایل ایپلیکیشن جوړونې، او اقتصاد په برخو کې ځانګړی علاقه لرم. 
-                زه هڅه کوم چې د خپلو مهارتونو له لارې خلکو ته د ژوند په مختلفو برخو کې مرسته وکړم.
-            </p>
-            <p>
-                زما اراده دا ده چې خپل پوهه او مهارتونه د خلکو په خدمت کې واچوم. زه غواړم چې د ټیکنالوژۍ له لارې
-                نوي فرصتونه رامنځته کړم او د خلکو ژوند ښه کړم. ددې لپاره، زه په مختلفو پروژو کار کوم او غواړي چې 
-                خپلې تجربې له نورو سره شریکې کړم.
-            </p>
-        </div>
-
-        <!-- Services Section (Optional) -->
-        <div class="about-section" id="services">
-            <h2>زما خدمات</h2>
-            <p>زه د ویب ډیزاین، ایپلیکیشن پراختیا، او مشورتي خدماتو په برخه کې تجربه لرم. که تاسو ته د دې خدماتو اړتیا وي، کولی شئ زما سره اړیکه ونیسئ.</p>
-        </div>
-<!DOCTYPE html>
 <html lang="ps">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>زما ویب پاڼه</title>
     <style>
-        /* عام ډیزاین */
+        /* ساده ډیزاین */
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
+            background-color: #f4f4f4;
             margin: 0;
             padding: 0;
             direction: rtl;
@@ -258,7 +18,7 @@
         header {
             background-color: #4CAF50;
             color: white;
-            padding: 20px;
+            padding: 15px;
             text-align: center;
         }
 
@@ -271,9 +31,9 @@
             float: right;
             display: block;
             color: white;
-            text-align: center;
             padding: 14px 20px;
             text-decoration: none;
+            text-align: center;
         }
 
         nav a:hover {
@@ -283,8 +43,8 @@
 
         section {
             padding: 20px;
-            margin: 20px;
             background-color: white;
+            margin: 15px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
@@ -298,44 +58,11 @@
             bottom: 0;
             width: 100%;
         }
-
-        .service {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
-
-        .service div {
-            width: 45%;
-            padding: 10px;
-            background-color: #f1f1f1;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .contact-form input, .contact-form textarea {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-
-        .contact-form button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .contact-form button:hover {
-            background-color: #45a049;
-        }
     </style>
 </head>
 <body>
+
+    <!-- ویب پاڼه سر -->
     <header>
         <h1>زما ویب پاڼه</h1>
         <p>د شمس الله په اړه معلومات</p>
@@ -343,43 +70,32 @@
 
     <!-- منو -->
     <nav>
-        <a href="#">کور</a>
-        <a href="#">زما په اړه</a>
-        <a href="#">خدمات</a>
-        <a href="#">تماس</a>
+        <a href="#home">کور</a>
+        <a href="#about">زما په اړه</a>
+        <a href="#contact">تماس</a>
     </nav>
 
     <!-- اصلي منځپانګه -->
-    <section>
+    <section id="home">
+        <h2>کور</h2>
+        <p>دا یو ساده ویب پاڼه ده چې د انټرنېټ لپاره جوړېږي.</p>
+    </section>
+
+    <section id="about">
         <h2>زما په اړه</h2>
-        <p>سلام! زه شمس الله یم. زه یو ځوان او پرمخ تلونکی شخصیت یم چې د خپل هیواد او خلکو د پرمختګ لپاره هڅې کوم. زه د ټیکنالوژۍ، موبایل ایپلیکیشن جوړونې، او اقتصاد په برخو کې ځانګړی علاقه لرم. زه هڅه کوم چې د خپلو مهارتونو له لارې خلکو ته د ژوند په مختلفو برخو کې مرسته وکړم.</p>
+        <p>سلام! زه شمس الله یم. زه یو ځوان او پرمخ تلونکی شخصیت یم چې د خپل هیواد او خلکو د پرمختګ لپاره هڅې کوم. زه د ټیکنالوژۍ، موبایل ایپلیکیشن جوړونې، او اقتصاد په برخو کې ځانګړی علاقه لرم.</p>
+    </section>
 
-        <h2>زما خدمات</h2>
-        <div class="service">
-            <div>
-                <h3>ویب ډیزاین</h3>
-                <p>زه د ویب ډیزاین خدمات وړاندې کوم، ترڅو ستاسو ویب پاڼه ښکلي او کاروونکو ته اسانه شي.</p>
-            </div>
-            <div>
-                <h3>ایپلیکیشن پراختیا</h3>
-                <p>زه د موبایل ایپلیکیشن جوړونې په برخه کې هم تجربه لرم او کولی شم ستاسو ایپلیکیشن لپاره حلونه وړاندې کړم.</p>
-            </div>
-        </div>
-
+    <section id="contact">
         <h2>تماس</h2>
-        <div class="contact-form">
-            <form>
-                <input type="text" name="name" placeholder="ستاسو نوم">
-                <input type="email" name="email" placeholder="برېښنالیک">
-                <textarea name="message" placeholder="پیغام ولیکئ" rows="5"></textarea>
-                <button type="submit">ارسال</button>
-            </form>
-        </div>
+        <p>تاسو کولی شئ زما سره د ایمیل له لارې اړیکه ونیسئ:</p>
+        <p>Email: example@example.com</p>
     </section>
 
     <!-- فوټر -->
     <footer>
         <p>© 2024 شمس الله | ټول حقونه خوندي دي</p>
     </footer>
+
 </body>
 </html>
